pci/require-drop-all-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pci-drop-all-capabilities
  annotations:
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/description: >-
      Capabilities permit privileged actions without giving full root access. All 
      capabilities should be dropped from a pod, with only those required added back.
spec:
  validationFailureAction: enforce
  rules:
  - name: check-containers
    match:  
      resources:
        kinds:
        - Pod
        namespaceSelector:
          matchLabels:
            data-classification: "PCI"        
    validate:
      message: "All capabilities should be dropped with only those required added back."
      pattern:
        spec:
          containers:
          - securityContext:
              capabilities:
                drop: ["ALL"]
  - name: check-init-containers
    match:  
      resources:
        kinds:
        - Pod
        namespaceSelector:
          matchLabels:
            data-classification: "PCI"
    validate:
      message: "All capabilities should be dropped with only those required added back."
      pattern:
        spec:
          =(initContainers):
          - securityContext:
              capabilities:
                drop: ["ALL"]
